RESOLVED FIXED91444
dumpCallFrame is broken in ToT
https://bugs.webkit.org/show_bug.cgi?id=91444
Summary dumpCallFrame is broken in ToT
Oliver Hunt
Reported 2012-07-16 16:39:44 PDT
dumpCallFrame is broken in ToT
Attachments
Patch (16.63 KB, patch)
2012-07-16 17:14 PDT, Oliver Hunt
no flags
Patch (17.43 KB, patch)
2012-07-16 18:05 PDT, Oliver Hunt
barraclough: review+
Oliver Hunt
Comment 1 2012-07-16 17:14:38 PDT
Build Bot
Comment 2 2012-07-16 17:40:33 PDT
Oliver Hunt
Comment 3 2012-07-16 18:05:13 PDT
Oliver Hunt
Comment 4 2012-07-16 18:14:26 PDT
Jessie Berlin
Comment 5 2012-07-16 18:30:04 PDT
(In reply to comment #4) > Committed r122790: <http://trac.webkit.org/changeset/122790> This broke the Windows build: http://build.webkit.org/builders/Apple%20Win%20Release%20%28Build%29/builds/33091/steps/compile-webkit/logs/stdio 3>Linking... 3> Creating library C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\lib\JavaScriptCore.lib and object C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\lib\JavaScriptCore.exp 3>JavaScriptCore.exp : error LNK2001: unresolved external symbol "public: void __thiscall JSC::Interpreter::dumpCallFrame(class JSC::ExecState *)" (?dumpCallFrame@Interpreter@JSC@@QAEXPAVExecState@2@@Z) 3>C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\bin\JavaScriptCore.dll : fatal error LNK1120: 1 unresolved externals 3>Build log was saved at "file://C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\obj\JavaScriptCore\BuildLog.htm" 3>JavaScriptCore - 2 error(s), 0 warning(s)
WebKit Review Bot
Comment 6 2012-07-16 18:44:34 PDT
Re-opened since this is blocked by 91462
Oliver Hunt
Comment 7 2012-07-18 16:26:19 PDT
Note You need to log in before you can comment on or make changes to this bug.