Source/JavaScriptCore/bytecode/CodeBlock.h
@@ -578,7 +578,9 @@ namespace JSC {
         void createActivation(CallFrame*);
 
         void clearEvalCache();
-
+        
+        UString nameForRegister(int registerNumber);
+        
         void addPropertyAccessInstruction(unsigned propertyAccessInstruction)
         {
             m_propertyAccessInstructions.append(propertyAccessInstruction);
